[project]
name = "text_to_sql_mas"
version = "0.1.0"
description = "text_to_sql_mas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
text_to_sql_mas = "text_to_sql_mas.main:run"
run_crew = "text_to_sql_mas.main:run"
train = "text_to_sql_mas.main:train"
replay = "text_to_sql_mas.main:replay"
test = "text_to_sql_mas.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
